Bug 836774 - Prevent objects/strings from flowing to an MToDouble, r=jandem.