js/src/jit-test/tests/ion/bug836774.js
@@ -1,0 +1,3 @@
+
+x = ''.charCodeAt(NaN);
+evaluate("for each (var e in [{}, {}, {}, {}, x]) {}");
